libr/include/r_bin.h

typedef struct r_bin_t RBin;
typedef struct r_bin_attr_t {
	RBinAttribute flags;
	char *ns;
	ut32 size;
	int offset;
	RBinLanguage lang;
	RBinFieldKind kind;
} RBinAttr;
// TODO: this struct must be used from RFlagItem we have this same thing dupped
typedef struct r_bin_name_t {
	char *name; // demangled name
	char *oname; // original (mangled) name // aka rawname in rflagitem
	char *fname; // flag name
	// char *uname; // user-defined custom name TODO
} RBinName;
typedef struct r_bin_hash_t {
	const char *type;
	ut64 addr;
	int len;
	ut64 from;
	ut64 to;
	ut8 buf[32];
	const char *cmd;
} RBinHash;
typedef struct r_bin_info_t {
	char *file;
	char *type;
	char *bclass;
	char *rclass;
	char *arch;
	char *cpu;
	char *machine;
	char *flags; // elf.flags, which can ship info about cpu features or the abi used
	char *abi;
	char *os;
	char *subsystem;
	char *rpath;
	char *guid;
	char *debug_file_name;
	const char *lang;
	char *default_cc;
	RList/*<RBinFileHash>*/ *file_hashes;
	int bits;
	int has_retguard; // can be -1 , 0 and 1
	bool has_va;
	bool has_pi; // pic/pie
	bool has_canary;
	bool has_sanitizers;
	bool has_crypto;
	bool has_nx;
	bool has_nobtcfi; // only used by OpenBSD for now no branch target control flow integrity
	bool has_libinjprot; // binary allows libraries to be injected
	int big_endian;
	bool has_lit;
	char *actual_checksum;
	char *claimed_checksum;
	int pe_overlay;
	bool signature;
	ut64 dbg_info;
	RBinHash sum[3];
	ut64 baddr;
	char *intrp;
	char *compiler;
	char *charset;
	char *dbglink;
} RBinInfo;
typedef struct r_bin_symbol_t {
	RBinName *name;
	char *classname;
	char *libname;
	/* const-unique-strings */
	const char *forwarder;
	const char *bind; // tied to attr already
	// RBinName *type;
	const char *type;
	char *rtype;
	bool is_imported;
	// Per-method arg-slot metadata for stack-VM archs (JVM, Dalvik, ...).
	// Anal uses these to synthesize register-kind argument variables.
	// arg_count == 0 means no metadata is available for this symbol.
	ut16 arg_first;          // first arg register index in the bytecode reg space
	ut16 arg_count;          // VM locals/arg slots for variable recovery (0 = no metadata)
	ut16 cc_arg_count;       // descriptor/callconv arg slots; can be zero for no-arg funcs
	/* only used by java */
	ut64 vaddr;
	ut64 paddr;
	/* Contiguous format metadata immediately before the code entrypoint. */
	ut32 hsize;
	RBinAttr attr;
	ut32 ordinal;
	int bits;
	int dup_count;
	ut16 ret_count;          // number of return slots (0 = void)
	const char *arg_prefix;  // interned register name prefix, e.g. "v" or "l"
} RBinSymbol;
typedef struct r_bin_section_t {
	char *name;
	ut64 size;
	ut64 vsize;
	ut64 vaddr;
	ut64 paddr;
	ut32 perm;
	ut32 flags;
	const char *type;
	const char *arch;
	char *format;
	int bits;
	bool has_strings;
	bool add; // indicates when you want to add the section to io `S` command
	bool is_data;
	bool is_segment;
	int backing_fd;

	RSlice bytes;
} RBinSection;
typedef struct r_bin_import_t {
	RBinName *name;
// 	char *name;
	char *libname;
	const char *bind;
	const char *type;
	char *classname;
	char *descriptor;
	ut32 ordinal;
	// used by elf, so we just expose them here, so we can remove the internal representation dupe
	bool in_shdr;
	bool is_sht_null;
	bool is_vaddr; /* when true, offset is virtual address, otherwise it's physical */
	bool is_imported;
} RBinImport;
typedef struct r_bin_string_t {
	char *string; // TODO: rename to text or so
	ut64 vaddr;
	ut64 paddr;
	ut32 ordinal;
	ut32 size; // size of buffer containing the string in bytes
	ut32 length; // length of string in chars
	char type; // Ascii Wide cp850 utf8 base64 ...
} RBinString;
struct r_bin_t {
	const char *file;
	RBinFile *cur; // TODO: deprecate
	int narch;
	void *user;
	/* preconfigured values */
	bool strings_nofp; // move to options struct passed instead of min, dump raw on every getstrings call
	Sdb *sdb;
	RVecBinSymclassGlob symclass_globs; // glob keys cached from symclass.sdb for r_bin_import_tags
	RIDStorage *ids;
	RMutaBind mb;
	RList/*<RBinFile>*/ *binfiles;
	PrintfCallback cb_printf;
	int loadany;
	RIOBind iob;
	RConsBind consb;
	char *force;
	bool want_dbginfo;
	int filter; // symbol filtering
	char strfilter; // string filtering
	char *strpurge; // purge false positive strings
	char *srcdir; // dir.source
	char *srcdir_base; // dir.source.base
	char *sdbdir; // dir.binsdb
	char *prefix; // bin.prefix
	char *strenc;
	ut64 filter_rules;
	RStrConstPool constpool;
	RBinOptions options;
	RLibStore *libstore;
	RList /*<RBinDemanglePlugin *>*/ *demangle_plugins;
	HtPP /*<char *, RBinDemanglePlugin *>*/ *demangle_by_name;
	RBinDemanglePlugin *demangle_by_type[R_BIN_DEMANGLE_TYPE_SLOTS];
	struct r_fs_t *fs; // optional: r_bin_open_buf probes containers via r_fs
};
typedef struct r_bin_field_t {
	ut64 vaddr;
	ut64 paddr;
	ut64 value;
	RBinAttr attr;
	RBinName *name;
	RBinName *type;
	bool format_named; // whether format is the name of a format or a raw pf format string
	char *comment;
	char *format;
} RBinField;
R_API void r_bin_free(RBin *bin);